--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,15 @@
-Flask
-Flask-RESTful
-Flask-SQLAlchemy
-lark
+aniso8601==9.0.1
+blinker==1.8.2
+click==8.1.7
+Flask==3.0.3
+Flask-RESTful==0.3.10
+Flask-SQLAlchemy==3.1.1
+itsdangerous==2.2.0
+Jinja2==3.1.4
+lark==1.2.2
+MarkupSafe==3.0.2
+pytz==2024.2
+six==1.16.0
+SQLAlchemy==2.0.36
+typing_extensions==4.12.2
+Werkzeug==3.0.4
